[tool.poetry]
name = "rasa-conversational-ai"
version = "0.1.0"
description = ""
authors = ["zhangchunyang <zhangchunyang_pri@126.com>"]

[tool.poetry.dependencies]
python = "^3.8.2"
jieba = "^0.42.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
